# PaperCalc_en

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  tsconfig.json
android/: .gitignore  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/katahiromz/papercalc/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/katahiromz/papercalc/: CustomWebChromeClient.kt  CustomWebViewClient.kt  MainActivity.kt  MainRepository.kt
android/app/src/main/res/drawable/: mainicon.xml
android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml
android/app/src/test/java/com/katahiromz/papercalc/: ExampleUnitTest.kt
scripts/: copy-assets.js
src/: AlgoAdd.js  AlgoBase.js  AlgoDiv.js  AlgoMul.js  AlgoSub.js  AlgoTest.js  Paper.ts  index.html  main.css  main.js  manifest.json  util.ts
windows/: .gitignore  CMakeLists.txt  PaperCalc.cpp  PaperCalc_res.rc  README.txt
windows/lang/: en_US.rc  ja_JP.rc
